k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chess-project
  labels:
    app: chess-project
